# hifigps

./: CLAUDE.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  docs.yml  python-package.yml  test.yml
docs/source/: changelog.rst  cli.rst  conf.py  gallery.rst  index.rst  installation.rst  tutorials.rst
docs/source/api/: modules.rst
example/: estimate_filament_signal.ipynb
scripts/: convolve.py  find_fuzzy_par.py  pair_stack.py
slurm/: find_fuzzy_par.sh  pair_stack.sh
src/hifigps/: __init__.py  calculation.py  estimate.py  estimate_err.py  halo.py  halo_opt.py  plot.py  plot_custom.py  utils.py
src/hifigps/scripts/: convolve.py  find_fuzzy_par.py  pair_stack.py
test/: test_calculation.ipynb  test_convolve.ipynb  test_data.ipynb  test_plot.ipynb
tests/: test_calculation.py  test_data.py  test_plot.py  test_scripts.py
tutorial/: 01_basic_calculation.ipynb  02_data_management.ipynb  03_plotting_guide.ipynb  04_beam_convolution.ipynb
